--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <header class="header">
       <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
     </header>
-    <main class="content"></main>
+    <main class="content">
+      <section class="profile">
+        <img class="profile__avatar" src="./images/Profile_avatar_image.png" alt="Аватар">
+        <div class="profile__info">
+          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <input type="button" class="profile__edit-button">
+          <p class="profile__description">Исследователь океана</p>  
+        </div>
+        <input type="button" class="profile__add-button">
+      </section>
+    </main>
     <footer class="footer"></footer>
   </div>
 </body>
