--- a/index.html
+++ b/index.html
@@ -21,8 +21,54 @@
         </div>
         <input type="button" class="profile__add-button">
       </section>
+      <section class="elements">
+        <article class="element">
+          <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
+          <div class="element__description">
+            <h2 class="element__title">Карачаевск</h2>
+            <input type="button" class="element__like-button">
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./images/Эльбрус.jpg" alt="Эльбрус">
+          <div class="element__description">
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <input type="button" class="element__like-button">
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
+          <div class="element__description">
+            <h2 class="element__title">Домбай</h2>
+            <input type="button" class="element__like-button">
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./images/Эльбрус.jpg" alt="Эльбрус">
+          <div class="element__description">
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <input type="button" class="element__like-button">
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
+          <div class="element__description">
+            <h2 class="element__title">Домбай</h2>
+            <input type="button" class="element__like-button">
+          </div>
+        </article>
+        <article class="element">
+          <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
+          <div class="element__description">
+            <h2 class="element__title">Карачаево-Черкесия</h2>
+            <input type="button" class="element__like-button">
+          </div>
+        </article>
+      </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
+    </footer>
   </div>
 </body>
 </html>
