feat: добавить блок popup

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
         </article>
       </section>
     </main>
+    <div class="popup">
+      <div class="popup__container">
+        <form class="popup__form">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <input type="text" class="popup__input popup__user-name">
+          <input type="text" class="popup__input popup__user-about">
+          <button type="submit" class="popup__button-submit">Сохранить</button>
+        </form>
+        <button type="reset" class="popup__button-reset"></button>
+      </div>
+    </div>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
     </footer>
