--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
       <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
     </footer>
   </div>
+  <script src="./pages/index.js"></script>
 </body>
 </html>
