feat: добавить hover эффект

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <img class="profile__avatar" src="./images/Profile_avatar_image.png" alt="Аватар">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <input type="button" class="profile__edit-button">
+          <input type="button" class="profile__edit-button page__button">
           <p class="profile__description">Исследователь океана</p>  
         </div>
-        <input type="button" class="profile__add-button">
+        <input type="button" class="profile__add-button page__button">
       </section>
       <section class="elements">
         <article class="element">
@@ -74,7 +74,7 @@
           <input type="text" class="popup__input popup__user-about">
           <button type="submit" class="popup__button-submit">Сохранить</button>
         </form>
-        <button type="reset" class="popup__button-reset"></button>
+        <button type="reset" class="popup__button-reset page__button"></button>
       </div>
     </div>
     <footer class="footer">
