fear: добавить ссылку сайта в readme

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <input type="button" class="profile__edit-button page__button">
-          <p class="profile__description">Исследователь океана</p>  
+          <p class="profile__description">Исследователь океана</p>
         </div>
         <input type="button" class="profile__add-button page__button">
       </section>
@@ -37,7 +37,7 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
+          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
             <input type="button" class="element__like-button">
@@ -51,7 +51,7 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
+          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
             <input type="button" class="element__like-button">
