fix: исправить отображение фотографии

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
+          <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
             <input type="button" class="element__like-button">
@@ -51,7 +51,7 @@
           </div>
         </article>
         <article class="element">
-          <img class="element__image" src="./images/Домбай.jpg" alt="Домбай">
+          <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
             <input type="button" class="element__like-button">
