--- a/index.html
+++ b/index.html
@@ -16,52 +16,52 @@
         <img class="profile__avatar" src="./images/Profile_avatar_image.png" alt="Аватар">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
-          <input type="button" class="profile__edit-button page__button">
+          <button type="button" class="profile__edit-button page__button"></button>
           <p class="profile__description">Исследователь океана</p>
         </div>
-        <input type="button" class="profile__add-button page__button">
+        <button type="button" class="profile__add-button page__button"></button>
       </section>
       <section class="elements">
         <article class="element">
           <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
           <div class="element__description">
             <h2 class="element__title">Карачаевск</h2>
-            <input type="button" class="element__like-button">
+            <button type="button" class="element__like-button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__image" src="./images/Эльбрус.jpg" alt="Эльбрус">
           <div class="element__description">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <input type="button" class="element__like-button">
+            <button type="button" class="element__like-button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
-            <input type="button" class="element__like-button">
+            <button type="button" class="element__like-button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__image" src="./images/Эльбрус.jpg" alt="Эльбрус">
           <div class="element__description">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <input type="button" class="element__like-button">
+            <button type="button" class="element__like-button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
-            <input type="button" class="element__like-button">
+            <button type="button" class="element__like-button"></button>
           </div>
         </article>
         <article class="element">
           <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
           <div class="element__description">
             <h2 class="element__title">Карачаево-Черкесия</h2>
-            <input type="button" class="element__like-button">
+            <button type="button" class="element__like-button"></button>
           </div>
         </article>
       </section>
