fix: изменить название класса из-за ошибки в яндекс практикуме

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <input type="text" class="popup__input popup__user-about">
           <button type="submit" class="popup__button-submit">Сохранить</button>
         </form>
-        <button type="reset" class="popup__button-reset page__button"></button>
+        <button type="reset" class="popup__reset-button page__button"></button>
       </div>
     </div>
     <footer class="footer">
