fix: добавить коментарий, почему не использую ul

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <button type="button" class="profile__add-button page__button"></button>
       </section>
       <section class="elements">
+        <!-- Я понимаю что тут можно использовать список <ul>, но тогда все карточки с фотографиями
+        станут элементами <ul> и их не получится в дальнейшем использовать отдельно без <ul>. Я посчитал что
+        могу где-нибудь в другом проекте использовать одну эту карточку, и если она будет элементом <ul>,
+        то у меня этого сделать не получится. Поэтому я принял решение использовать element как отдельный блок -->
         <article class="element">
           <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
           <div class="element__description">
