feat: Добавить кнопку удаления карточки

--- a/index.html
+++ b/index.html
@@ -22,16 +22,13 @@
         <button type="button" class="profile__add-button page__button"></button>
       </section>
       <section class="elements">
-        <!-- Я понимаю что тут можно использовать список <ul>, но тогда все карточки с фотографиями
-        станут элементами <ul> и их не получится в дальнейшем использовать отдельно без <ul>. Я посчитал что
-        могу где-нибудь в другом проекте использовать одну эту карточку, и если она будет элементом <ul>,
-        то у меня этого сделать не получится. Поэтому я принял решение использовать element как отдельный блок -->
         <article class="element">
           <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
           <div class="element__description">
             <h2 class="element__title">Карачаевск</h2>
             <button type="button" class="element__like-button"></button>
           </div>
+          <button type="button" class="element__trash-button page__button"></button>
         </article>
         <article class="element">
           <img class="element__image" src="./images/Эльбрус.jpg" alt="Эльбрус">
@@ -39,6 +36,7 @@
             <h2 class="element__title">Гора Эльбрус</h2>
             <button type="button" class="element__like-button"></button>
           </div>
+          <button type="button" class="element__trash-button page__button"></button>
         </article>
         <article class="element">
           <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
@@ -46,6 +44,7 @@
             <h2 class="element__title">Домбай</h2>
             <button type="button" class="element__like-button"></button>
           </div>
+          <button type="button" class="element__trash-button page__button"></button>
         </article>
         <article class="element">
           <img class="element__image" src="./images/Эльбрус.jpg" alt="Эльбрус">
@@ -53,6 +52,7 @@
             <h2 class="element__title">Гора Эльбрус</h2>
             <button type="button" class="element__like-button"></button>
           </div>
+          <button type="button" class="element__trash-button page__button"></button>
         </article>
         <article class="element">
           <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
@@ -60,6 +60,7 @@
             <h2 class="element__title">Домбай</h2>
             <button type="button" class="element__like-button"></button>
           </div>
+          <button type="button" class="element__trash-button page__button"></button>
         </article>
         <article class="element">
           <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
@@ -67,6 +68,7 @@
             <h2 class="element__title">Карачаево-Черкесия</h2>
             <button type="button" class="element__like-button"></button>
           </div>
+          <button type="button" class="element__trash-button page__button"></button>
         </article>
       </section>
     </main>
