--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button type="button" class="profile__add-button page__button"></button>
       </section>
       <section class="elements">
+        <!--
         <article class="element">
           <img class="element__image" src="./images/Карачаевск.jpg" alt="Карачаевск">
           <div class="element__description">
@@ -70,6 +71,7 @@
           </div>
           <button type="button" class="element__trash-button page__button"></button>
         </article>
+        -->
       </section>
     </main>
     <div class="popup">
@@ -87,6 +89,17 @@
       <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
     </footer>
   </div>
+  <!-- template карточки с фотографией -->
+  <template id="template-element">
+    <article class="element">
+      <img class="element__image" src="" alt="">
+      <div class="element__description">
+        <h2 class="element__title"></h2>
+        <button type="button" class="element__like-button"></button>
+      </div>
+      <button type="button" class="element__trash-button page__button"></button>
+    </article>
+  </template>
   <script src="scripts/index.js"></script>
 </body>
 </html>
