--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@
         <button type="reset" class="popup__reset-button popup__reset-add-button page__button"></button>
       </div>
     </div>
+    <div class="popup popup_zoom-image">
+      <figure class="popup__figure">
+        <img class="popup__image" src="" alt="">
+        <figcaption class="popup__figcaption"></figcaption>
+        <button type="reset" class="popup__reset-button page__button"></button>
+      </figure>
+    </div>
     <footer class="footer">
-      <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
+      <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
   </div>
   <!-- template карточки с фотографией -->
