--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </section>
       <section class="elements"></section>
     </main>
+    <!-- popup редактирования профиля -->
     <div class="popup popup_edit-profile">
       <div class="popup__container">
         <form class="popup__form">
@@ -46,6 +47,7 @@
         <button type="reset" class="popup__reset-button popup__reset-add-button page__button"></button>
       </div>
     </div>
+    <!-- popup с большой фотографией -->
     <div class="popup popup_zoom-image">
       <figure class="popup__figure">
         <img class="popup__image" src="" alt="">
