--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <button type="button" class="element__trash-button page__button"></button>
     </article>
   </template>
+  <script src="scripts/cards.js"></script>
   <script src="scripts/index.js"></script>
 </body>
 </html>
