--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <form class="popup__form" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__fieldset">
-            <input type="text" id="name" class="popup__input popup__user-name" minlength="2" maxlength="40" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
+            <input name="userName" type="text" id="name" class="popup__input popup__user-name" minlength="2" maxlength="40" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
             <span class="popup__error name-error"></span>
-            <input type="text" id="about" class="popup__input popup__user-about" minlength="2" maxlength="200" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
+            <input name="userAbout" type="text" id="about" class="popup__input popup__user-about" minlength="2" maxlength="200" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
             <span class="popup__error about-error"></span>
             <button type="submit" class="popup__button-submit">Сохранить</button>
           </fieldset>
@@ -45,9 +45,9 @@
         <form class="popup__form" novalidate>
           <h2 class="popup__title">Новое место</h2>
           <fieldset class="popup__fieldset">
-            <input type="text" id="place-title" class="popup__input popup__place-title" placeholder="Название" minlength="2" maxlength="30" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
+            <input name="name" type="text" id="place-title" class="popup__input popup__place-title" placeholder="Название" minlength="2" maxlength="30" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
             <span class="popup__error place-title-error"></span>
-            <input type="url" id="image-link" class="popup__input popup__image-link" placeholder="Ссылка на картинку" pattern="[a-zA-Zа-яА-я\-\S]+$" required>
+            <input name="link" type="url" id="image-link" class="popup__input popup__image-link" placeholder="Ссылка на картинку" pattern="[a-zA-Zа-яА-я\-\S]+$" required>
             <span class="popup__error image-link-error"></span>
             <button type="submit" class="popup__button-submit popup__button-element-submit">Создать</button>
           </fieldset>
