--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title lang="en">Mesto</title>
-  <link rel="stylesheet" href="pages/index.css">
 </head>
 <body class="body">
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="images/logo.svg" alt="Логотип Место">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Логотип Место">
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="images/Profile_avatar_image.png" alt="Аватар">
+        <img class="profile__avatar" src="<%=require('./images/Profile_avatar_image.png')%>" alt="Аватар">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <button type="button" class="profile__edit-button page__button"></button>
@@ -80,6 +79,5 @@
       <button type="button" class="element__trash-button page__button"></button>
     </article>
   </template>
-  <script type="module" src="pages/index.js"></script>
 </body>
 </html>
