--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
         <form class="popup__form" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__fieldset">
-            <input name="userName" type="text" id="name" class="popup__input popup__user-name" minlength="2" maxlength="40" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
+            <input name="nameUser" type="text" id="name" class="popup__input popup__user-name" minlength="2" maxlength="40" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
             <span class="popup__error name-error"></span>
-            <input name="userAbout" type="text" id="about" class="popup__input popup__user-about" minlength="2" maxlength="200" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
+            <input name="aboutUser" type="text" id="about" class="popup__input popup__user-about" minlength="2" maxlength="200" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
             <span class="popup__error about-error"></span>
             <button type="submit" class="popup__button-submit">Сохранить</button>
           </fieldset>
