--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,9 @@
           <button type="button" class="profile__avatar-button"></button>
         </div>
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <h1 class="profile__title"></h1>
           <button type="button" class="profile__edit-button page__button"></button>
-          <p class="profile__description">Исследователь океана</p>
+          <p class="profile__description"></p>
         </div>
         <button type="button" class="profile__add-button page__button"></button>
       </section>
@@ -31,9 +31,9 @@
         <form class="popup__form" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
           <fieldset class="popup__fieldset">
-            <input name="nameUser" type="text" id="name" class="popup__input popup__user-name" minlength="2" maxlength="40" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
+            <input name="name" type="text" id="name" class="popup__input popup__user-name" minlength="2" maxlength="40" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
             <span class="popup__error name-error"></span>
-            <input name="aboutUser" type="text" id="about" class="popup__input popup__user-about" minlength="2" maxlength="200" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
+            <input name="about" type="text" id="about" class="popup__input popup__user-about" minlength="2" maxlength="200" pattern="[a-zA-Zа-яА-я\-\s]+$" required>
             <span class="popup__error about-error"></span>
             <button type="submit" class="popup__button-submit">Сохранить</button>
           </fieldset>
