feat: доделать запросы

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar-container">
-          <img class="profile__avatar" src="<%=require('./images/Profile_avatar_image.png')%>" alt="Аватар">
+          <img class="profile__avatar" src="#" alt="Аватар">
           <button type="button" class="profile__avatar-button"></button>
         </div>
         <div class="profile__info">
@@ -103,7 +103,7 @@
         <h2 class="element__title"></h2>
         <div class="element__like-container">
           <button type="button" class="element__like-button"></button>
-          <span class="element__like-counter">5</span>
+          <span class="element__like-counter"></span>
         </div>
       </div>
       <button type="button" class="element__trash-button page__button"></button>
